--- a/signup.html
+++ b/signup.html
@@ -4,14 +4,16 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
 		<title>Werewolves</title>
+		<script src="js/jquery-2.1.1.min.js"></script>
+		<script src="js/signup.js"></script>
 	</head>
 	<body>
-		<h1>Log In</h1>
+		<h1>Sign Up</h1>
 		<form>
 			<input type="email" placeholder="Email" id="email_input"/>
 			<input type="password" placeholder="Password" id="password_input" />
 			<input type="password" placeholder="Confirm Password" id="password_input2" />
 		</form>
-		<button> Sign Up</button>
+		<button id="signup_btn"> Sign Up</button>
 	</body>
 </html>
