fixed login and signup

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
 		<title>Werewolves</title>
+		<script src="js/jquery-2.1.1.min.js"></script>
+		<script src="js/index.js"></script>
 	</head>
 	<body>
 		<h1>Log In</h1>
@@ -11,7 +13,7 @@
 			<input type="email" placeholder="Email" id="email_input"/>
 			<input type="password" placeholder="Password" id="password_input" />
 		</form>
-		<button> Sign In</button>
+		<button id="signin_btn"> Sign In</button>
 		<form action="signup.html" method="get">
 		<button>Sign Up</button>
 		</form>
