--- a/lobby.html
+++ b/lobby.html
@@ -8,14 +8,16 @@
 	<body>
 		<h1>Lobby</h1>
 		<div id="games">
-			<h3> Game01 </h3>
-			<h3> Game02</h3>
+			<h3>Games online </h3>
+			<p>Game01</p>
+			<p>Game02</p>
 		</div>
 		<div id="players"> 
-			<h3> Max </h3>
-			<h3> Kenny </h3>
-			<h3> Eve </h3>
-			<h3> Michelle </h3>
+			<h3>Players online</h3>
+			<p>Max</p>
+			<p>Kenny</p>
+			<p>Eve</p>
+			<p>Michelle</p>
 		</div>
 		<div id="chat_log">
 			<p><strong>Max:</strong> howdy everyone </p>
