--- a/lobby.html
+++ b/lobby.html
@@ -4,8 +4,11 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
 		<title>Werewolves</title>
+		<script src="js/jquery-2.1.1.min.js"></script>
+		<script src="js/lobby.js"></script>
 	</head>
 	<body>
+		<button id="sign_out_btn">Sign Out</button>
 		<h1>Lobby</h1>
 		<div id="games">
 			<h3>Games online </h3>
@@ -14,12 +17,9 @@
 		</div>
 		<div id="players"> 
 			<h3>Players online</h3>
-			<p>Max</p>
-			<p>Kenny</p>
-			<p>Eve</p>
-			<p>Michelle</p>
 		</div>
 		<div id="chat_log">
+			<h3> Lobby Chat </h3>
 			<p><strong>Max:</strong> howdy everyone </p>
 			<p><strong>Kenny:</strong> Play all da games</p>
 		</div>
